force-app/main/default/objects/sked_Trade_API_Data__c/sked_Trade_API_Data__c.object-meta.xml
<CustomObject>
    <label>Trade API Data</label>
    <nameField>
        <displayFormat>T-API-D-{0000}</displayFormat>
        <label>Trade API Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trades API Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>