force-app/main/default/objects/sked_Trade_API_Data__c/fields/sked_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>sked_Approver_Email__c</fullName>
    <description>Email of the resource that approved this trade event</description>
    <label>Approver Email</label>
    <type>Email</type>
</CustomField>