force-app/main/default/objects/sked_Trade_API_Data__c/fields/sked_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Event_Date__c</fullName>
    <description>Date of the traded-into JobAllocation/Activity this relates to</description>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>