force-app/main/default/objects/sked_Trade_API_Data__c/fields/sked_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_Event_Id__c</fullName>
    <inlineHelpText>Id of the traded-into JobAllocation/Activity this relates to</inlineHelpText>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>