force-app/main/default/objects/sked_Trade_API_Data__c/fields/sked_From_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_From_Employee_Id__c</fullName>
    <description>Workday EmployeeId of the resource this was traded from</description>
    <label>From Employee Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>