force-app/main/default/objects/sked_Trade_API_Data__c/fields/sked_From_Resource__c.field-meta.xml
<CustomField>
    <fullName>sked_From_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Trade API Records (From)</relationshipLabel>
    <relationshipName>sked_Trade_API_Data_From</relationshipName>
    <type>Lookup</type>
</CustomField>