force-app/main/default/objects/sked_Trade_API_Data__c/fields/sked_Resource__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Trade API Records</relationshipLabel>
    <relationshipName>sked_Trade_API_Data</relationshipName>
    <type>Lookup</type>
</CustomField>