force-app/main/default/objects/sked_Trade_API_Data__c/fields/sked_Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>sked_Sync_Message__c</fullName>
    <label>Sync Message</label>
    <length>200</length>
    <type>Text</type>
</CustomField>