force-app/main/default/objects/sked_Trade_API_Data__c/fields/sked_Trade_Into_Key__c.field-meta.xml
<CustomField>
    <fullName>sked_Trade_Into_Key__c</fullName>
    <formula>CASESAFEID(sked_Event_Id__c) &amp; &quot;:&quot; &amp; CASESAFEID(sked_Resource__c) &amp; &quot;:&quot; &amp; TEXT(sked_Event_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Into Key</label>
    <type>Text</type>
</CustomField>